// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongsLinkHub > renders with multiple songs and multiple artists correctly 1`] = `
"<div class="mt-2 grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-2">
  <div><a href="/songs/song-1/" aria-label="song name"><span>Song One - </span></a></div>
  <div><a href="/songs/song-2/" aria-label="song name"><span>Song Two - </span></a></div>
</div>"
`;

exports[`SongsLinkHub > renders with no songs correctly 1`] = `"<div class="mt-2 grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-2"></div>"`;

exports[`SongsLinkHub > renders with one song with one artist correctly 1`] = `
"<div class="mt-2 grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-2">
  <div><a href="/songs/song-1/" aria-label="song name"><span>Song One - </span></a></div>
</div>"
`;
